[package]
name = "actix-bug"
version = "0.1.0"
authors = ["Aleksei Sidorov <aleksei.sidorov@xdev.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = {version = "2.0"}
futures = "0.3"
env_logger = "0.7"
log = "0.4"
reqwest = "0.10"
anyhow = "1.0"